==> terjeio/grblHAL/drivers/SAMD21/main/diskio.c <==
#include "driver.h"
#include <stdint.h>
#include <stdbool.h>
#include <Arduino.h>
#include "diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define pinIn(p) ((PORT->Group[g_APinDescription[p].ulPort].IN.reg & (1 << g_APinDescription[p].ulPin)) != 0)
#define pinOut(p, e) { if(e) PORT->Group[g_APinDescription[p].ulPort].OUTSET.reg = (1 << g_APinDescription[p].ulPin); else PORT->Group[g_APinDescription[p].ulPort].OUTCLR.reg = (1 << g_APinDescription[p].ulPin); }
#define SD_SCK_PIN  27
#define SD_MOSI_PIN 26
#define SD_CS_PIN   28
#define SD_MISO_PIN 29
#define SD_CLOCKMODE SERCOM_SPI_MODE_0
#define SD_CLOCK_ID GCM_SERCOM4_CORE
#define SD_SCK_PIN  8
#define SD_MOSI_PIN 9
#define SD_CS_PIN   6
#define SD_MISO_PIN 10
#define SD_CLOCKMODE SERCOM_SPI_MODE_0

static
void xmit_spi(BYTE dat)
{
    sd_spi->SPI.DATA.bit.DATA = dat; // Writing data into Data register

    while(sd_spi->SPI.INTFLAG.bit.RXC == 0);

    dat = sd_spi->SPI.DATA.bit.DATA;
}

static
BYTE rcvr_spi (void)
{
    sd_spi->SPI.DATA.bit.DATA = 0xFF; // Writing dummy data into Data register

    while(sd_spi->SPI.INTFLAG.bit.RXC == 0);

    return (BYTE)sd_spi->SPI.DATA.bit.DATA;
}

void power_on (void)
{
    static bool init = false;

    /*
     * This doesn't really turn the power on, but initializes the
     * SSI port and pins needed to talk to the card.
     */

    if(!init) {
        // Assign clock
        GCLK->CLKCTRL.reg = GCLK_CLKCTRL_ID(SD_CLOCK_ID)|GCLK_CLKCTRL_GEN_GCLK0|GCLK_CLKCTRL_CLKEN;
        while(GCLK->STATUS.reg & GCLK_STATUS_SYNCBUSY);
 
        // Enable the peripherals used to drive the SDC on SSI
        pinMode(SD_CS_PIN, OUTPUT);
        pinPeripheral(SD_MISO_PIN, g_APinDescription[SD_MISO_PIN].ulPinType); // PIO_SERCOM
        pinPeripheral(SD_SCK_PIN, g_APinDescription[SD_SCK_PIN].ulPinType);
        pinPeripheral(SD_MOSI_PIN, g_APinDescription[SD_MOSI_PIN].ulPinType);

        hal.delay_ms(1, NULL);
    }

    // Disable and reset peripheral
    sd_spi->SPI.CTRLA.bit.ENABLE = 0;
    while(sd_spi->SPI.SYNCBUSY.bit.ENABLE)

    if(!init) {

        sd_spi->SPI.CTRLA.bit.SWRST = 1;
        while(sd_spi->SPI.CTRLA.bit.SWRST || sd_spi->SPI.SYNCBUSY.bit.SWRST);

        // Init
        sd_spi->SPI.CTRLA.reg = SERCOM_SPI_CTRLA_MODE_SPI_MASTER |
                                SERCOM_SPI_CTRLA_DOPO(0) |
                                SERCOM_SPI_CTRLA_DIPO(3) |
                                0 << SERCOM_SPI_CTRLA_DORD_Pos;

        //Setting the CTRLB register    //Active the SPI receiver.
        sd_spi->SPI.CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(8)|SERCOM_SPI_CTRLB_RXEN;

        int cpha = (SD_CLOCKMODE & 0x1ul) == 0 ? 0 : 1;
        int cpol = (SD_CLOCKMODE & 0x2ul) == 0 ? 0 : 1;

        //Setting the CTRLA register
        sd_spi->SPI.CTRLA.reg |= ( cpha << SERCOM_SPI_CTRLA_CPHA_Pos )|( cpol << SERCOM_SPI_CTRLA_CPOL_Pos);

        hal.delay_ms(1, NULL);
    }

    //Synchronous arithmetic
    sd_spi->SPI.BAUD.reg = SystemCoreClock / (2 * 400000) - 1;

    sd_spi->SPI.CTRLA.bit.ENABLE = 1;
    while(sd_spi->SPI.SYNCBUSY.bit.ENABLE)

    init = true;
    PowerFlag = 1;
}

static
void set_max_speed(void)
{
    unsigned long i;

    /* Set the maximum speed as half the system clock, with a max of 12 MHz. */
    i = SystemCoreClock / 2;
    if(i > 12000000)
        i = 12000000;

    sd_spi->SPI.CTRLA.bit.ENABLE = 0;
    while(sd_spi->SPI.SYNCBUSY.bit.ENABLE);

    sd_spi->SPI.BAUD.reg = SystemCoreClock / (2 * i) - 1;

    sd_spi->SPI.CTRLA.bit.ENABLE = 1;
    while(sd_spi->SPI.SYNCBUSY.bit.ENABLE);
}
